--- a/titan/app/Page.module.css
+++ b/titan/app/Page.module.css
@@ -1,19 +1,15 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
+
 
 .Button{
     display: inline-block;
     margin: 20px;
-    border: 2px solid rgb(66, 116, 63);
-    border-radius: 60px;
-    padding: 1%;
 }
 .Button_img{
     display: inline-block;
     margin: 20px;
+    height: 50px;
+    width: 50px;
     /* background-image: url('/image/brr.jpg'); */
-    padding: 1%;
 
 }
 .img{
